# playgraphics

./: CHANGELOG.md  LICENSE  README.md  flake.nix  playgraphics.cabal
src/PlayGraphics/: Ball.hs  Playing.hs  Ray.hs  Vec.hs
