cabal-version:        >= 1.10

name:                 playgraphics
version:              0.1.0.0
license:              MIT
license-file:         LICENSE
author:               dramforever
maintainer:           dramforever@live.com
copyright:            2020 dramforever
category:             Graphics
build-type:           Simple

library
  exposed-modules:      PlayGraphics.Playing,
                        PlayGraphics.Ball,
                        PlayGraphics.Ray,
                        PlayGraphics.Vec
  build-depends:        base >= 4.14 && < 4.15,
                        JuicyPixels >= 3.3.5
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wno-partial-type-signatures
  default-extensions:   DeriveFunctor,
                        DerivingVia,
                        DeriveFoldable,
                        DeriveTraversable,
                        PartialTypeSignatures,
                        TupleSections
